11511 usbsacm fails to open sigma designs device Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>